--- a/Cynthia_Portfolio.css
+++ b/Cynthia_Portfolio.css
@@ -23,8 +23,8 @@ body{
     height: 57px;
 }
 .formStyle { 
-    background-color: #2ecc71;
-    padding: 20px; 
+    background-color: #c5ebd5;
+    padding: 10px; 
     width: 400px; 
     margin-bottom: 20px; 
     border-bottom-width: 1px; 
@@ -42,12 +42,12 @@ body{
       float: right;
       background-color:#ffffff;
       display:inline-block;
-      color:#2ecc71;
+      color:#27ae60;
       font-size:28px;
       font-weight: 500;
       padding:6px 24px;
       margin-top: 15px;
-      margin-right: 100px;
+      margin-right: 120px;
       text-decoration:none;
   }
   
