--- a/css/mark_portfolio.css
+++ b/css/mark_portfolio.css
@@ -5,9 +5,6 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-body{
-
-}
 .menu-list li a{
     margin-right: 10px;
     text-decoration: none;
@@ -32,9 +29,6 @@ body{
     text-align: left;
     padding-left:2%;
 }
-.nav-bar{
-
-}
 nav{
     position: relative;
     padding: 20px 20px 20px 10px;
@@ -45,4 +39,23 @@ nav{
 }
 .menu-list li a:hover{
     color:  #0085ba;
+}
+/* Interest section */
+.interest-section .grid{
+    display: inline-block;
+    width: 30%;
+    padding: 10px;
+}
+.interest-section{
+    margin-top: 20px;
+    text-align: center;
+}
+.interest-section h3{
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    line-height: 2px;
+}
+.interest-section p{
+    letter-spacing: 1px;
 }
