--- a/css/emmanuel_portfolio.css
+++ b/css/emmanuel_portfolio.css
@@ -5,7 +5,7 @@
 .main{
     height: 98vh
     display: block;
-    width: 70%;
+    width: 60%;
     margin: auto;
     /* background-color: rgba(255, 255, 255, 0.865); */
     /* box-shadow: 1px 2px rgba(0, 0, 0, 0.247); */
@@ -89,9 +89,11 @@ h1{
 }
 .inner-left{
     background-color: #F9CA00;
+    float: left;
 }
 .inner-right{
     background-color: #00ACEE;
+    float: right;
 }
 .footer{
     text-align: center;
@@ -103,5 +105,19 @@ h1{
     color: white;
     line-height: 250px;
     padding: 0;
+    margin: 0;
+}
+.inner-box .inner-right{
+    text-align: center;
+    vertical-align: middle;
+}
+.fab.fa-twitter{
+    color: white;
+    font-size: 150px;
+    /* text-align: center; */
+    line-height: 250px;
 
+}
+.box *{
+    /* border: 1px solid aquamarine */
 }
