--- a/css/mark_portfolio.css
+++ b/css/mark_portfolio.css
@@ -47,7 +47,7 @@ nav{
     padding: 10px;
 }
 .interest-section{
-    margin-top: 20px;
+    margin-top: 60px;
     text-align: center;
 }
 .interest-section h3{
@@ -58,4 +58,32 @@ nav{
 }
 .interest-section p{
     letter-spacing: 1px;
+}
+.column.my-image{
+    background-image: url(../image/IMG_20160113_111054.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;    
+
+}
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .column .about{
+      margin-top:50px;
+  }
+  .column .about p{
+    margin-top:20px;
 }
