--- a/css/mark_portfolio.css
+++ b/css/mark_portfolio.css
@@ -59,31 +59,29 @@ nav{
 .interest-section p{
     letter-spacing: 1px;
 }
-.column.my-image{
+
+.about-section{
+    margin-top:60px;
+}
+.col-container {
+    display: flex;
+    width: 100%;
+  }
+  .col {
+    flex: 1;
+    padding: 16px;
+  }
+  .col.my-image{
     background-image: url(../image/IMG_20160113_111054.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;    
-
+    transition: 0.3s; 
 }
-.column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-    height: 300px;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  .column .about{
-      margin-top:50px;
-  }
-  .column .about p{
-    margin-top:20px;
+.col .about{
+    margin-top:50px;
+}
+.col .about p{
+  margin-top:20px;
 }
