--- a/css/mark_portfolio.css
+++ b/css/mark_portfolio.css
@@ -71,6 +71,10 @@ nav{
     flex: 1;
     padding: 16px;
   }
+  .col2 {
+    flex: 2;
+    padding: 16px;
+  }
   .col.my-image{
     background-image: url(../image/IMG_20160113_111054.jpg);
     background-size: contain;
@@ -79,9 +83,16 @@ nav{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s; 
 }
-.col .about{
+.col2.my-about{
+    padding:30px;
+    padding-right: 60px;
+}
+.col2 .about{
     margin-top:50px;
 }
-.col .about p{
+.col2 .about p{
   margin-top:20px;
+}
+.skill-section{
+    margin:60px 80px 30px; 
 }
