--- a/css/mark_portfolio.css
+++ b/css/mark_portfolio.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    letter-spacing: 1px;
 }
 .menu-list li a{
     margin-right: 10px;
@@ -95,4 +96,20 @@ nav{
 }
 .skill-section{
     margin:60px 80px 30px; 
+}
+.skill-info{
+    padding:0 2%;
+}
+.skill h3{
+    margin-bottom: 10px;
+}
+.skill-info p{
+    margin-bottom: 15px;
+}
+button{
+    padding: 15px;
+    background: #4497b9;
+    border: none;
+    outline: none;
+    color: #fff;
 }
