--- a/css/emmanuel_portfolio.css
+++ b/css/emmanuel_portfolio.css
@@ -3,7 +3,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 .main{
-    height: 98vh
+    height: 98vh;
     display: block;
     width: 60%;
     margin: auto;
