--- a/index.css
+++ b/index.css
@@ -1,5 +1,60 @@
+body{
+    background: url('./image/background-image.jpg');
+    background-position: 62% 6%;
+    color: #d87aeebf;
+    margin: 0px;
+}
+.wrapper{
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 99%;
+    position: absolute;
+}
 header{
     text-align: center;
     font-family: 'Roboto Slab', serif;
     font-size: 40px;
+}
+article {
+    width: 33%;
+    float: left;
+    text-align: center;
+}
+article img{
+    width: 70%;
+    border-radius: 50%;
+    margin: auto;
+    height: 420px;
+}
+article div p span{
+    padding: 1px;
+    border: 1px solid #79575ec2;
+    border-radius: 4px;
+    transition: padding, 2s;
+}
+article div p span:hover{
+    padding: 1.5px;
+    border: 1px solid #79575e;
+}
+
+article div p{
+    font-size: 2em;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+a{
+    text-decoration: none;
+}
+.about-text p{
+    width: 50%;
+    text-align: center;
+    margin: auto;
+    font-size: 1.5em;
+    color: white;
+}
+.about-text {
+    margin-top: -3em;
+    margin-bottom: 6em;
+    font-family: 'Yatra One', cursive;
+    color: #ffffffe0;
 }
