--- a/css/mark_portfolio.css
+++ b/css/mark_portfolio.css
@@ -37,6 +37,11 @@ body{
     text-align: left;
     padding-left:2%;
 }
+.logo-letter{
+    background: #4497b9;
+    padding: 5px 10px;
+    margin: 0 3px 0 0;
+}
 nav{
     position: relative;
     padding: 20px 20px 20px 10px;
