--- a/index.css
+++ b/index.css
@@ -21,10 +21,10 @@ article {
     text-align: center;
 }
 article img{
-    width: 70%;
+    width: 340px;
     border-radius: 50%;
     margin: auto;
-    height: 420px;
+    height: 340px;
 }
 article div p span{
     padding: 1px;
