--- a/css/Cynthia_Portfolio.css
+++ b/css/Cynthia_Portfolio.css
@@ -3,11 +3,11 @@ body{
 background: -webkit-linear-gradient(to left, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to left, #1F1C18, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    color: blue;
+    color: #ffffff;
     margin: 0;
 }
 .container{
- text-align: right;
+ text-align: center;
 }
 .container h1 {
     padding-left: 180px;
